Change ContactInfoBox edit functionality - update all fields together rather than individual fields

--- a/ClientContactViews/ContactInfoBox.xaml
+++ b/ClientContactViews/ContactInfoBox.xaml
@@ -62,16 +62,6 @@
                             <Grid>
                                 <ScrollViewer Name="PART_ContentHost" Background="{TemplateBinding Background}" 
                                           SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}" />
-
-                                <local:EditTextBoxButton x:Name="EditBtn" 
-                                                         HorizontalAlignment="Right" 
-                                                         Width="30"
-                                                         Visibility="Hidden"
-                                                         Command="{Binding EnableTextBox}"
-                                                         CommandParameter="{Binding Path=Name, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type TextBox}}}"
-                                                         />
-
-
                             </Grid>
 
                         </Border>
@@ -82,16 +72,6 @@
                                 <Setter Property="BorderThickness" Value="1"/>
                                 <Setter Property="BorderBrush" Value="Transparent" />
                             </Trigger>
-                            
-                            <MultiTrigger >
-                                <MultiTrigger.Conditions>
-                                    <Condition Property="IsMouseOver" Value="True"/>
-                                    <Condition Property="IsReadOnly" Value="True"/>
-                                </MultiTrigger.Conditions>
-                                <MultiTrigger.Setters>
-                                    <Setter TargetName="EditBtn" Property="Visibility" Value="Visible"/>
-                                </MultiTrigger.Setters>
-                            </MultiTrigger>
                         </ControlTemplate.Triggers>
                     </ControlTemplate>
                 </Setter.Value>
@@ -133,6 +113,7 @@
                 <RowDefinition Height="40"/>
                 <RowDefinition Height="40"/>
                 <RowDefinition Height="*"/>
+                <RowDefinition Height="50"/>
             </Grid.RowDefinitions>
 
             <StackPanel  Grid.Row="0" Grid.ColumnSpan="7" Orientation="Horizontal" HorizontalAlignment="Right">
@@ -149,7 +130,7 @@
 
             <Image  Grid.Column="0" Grid.Row="0" Grid.ColumnSpan="2" Margin="0"
                     Grid.RowSpan="2" Width="60" Style="{StaticResource image}" ToolTip="Contact Name" Source=".\res\user.png"/>
-            <local:ContactInfoTextBox Grid.Row="1" x:Name="contactName" IsReadOnly="{Binding IsContactNameReadOnly}" Grid.Column="2" Grid.ColumnSpan="5" Text="{Binding contactName}" Style="{StaticResource textBox}"/>
+            <TextBox Grid.Row="1" x:Name="contactName" IsReadOnly="{Binding IsContactNameReadOnly}" Grid.Column="2" Grid.ColumnSpan="5" Text="{Binding contactName}" Style="{StaticResource textBox}"/>
 
 
             <DockPanel Grid.Column="0" Grid.Row="2" Grid.ColumnSpan="7">
@@ -191,7 +172,7 @@
                         <ColumnDefinition Width="*" />
                     </Grid.ColumnDefinitions>
                     <Image  Grid.Column="0" Style="{StaticResource image}" ToolTip="Phone Number" Source=".\res\phone.png"/>
-                    <local:ContactInfoTextBox Grid.Column="1" x:Name="phone" IsReadOnly="{Binding IsPhoneReadOnly}" Text="{Binding phone, Mode=TwoWay}" Style="{StaticResource textBox}"/>
+                    <TextBox Grid.Column="1" x:Name="phone" IsReadOnly="{Binding IsPhoneReadOnly}" Text="{Binding phone, Mode=TwoWay}" Style="{StaticResource textBox}"/>
                 </Grid>
                 <Label DockPanel.Dock="Top" Content="{Binding PhoneValidationsText}" Visibility="{Binding PhoneValidationsVisible, Converter={StaticResource BoolToVisibilityColapsedConverter}}" />
                 <Grid DockPanel.Dock="Top" Height="40">
@@ -200,7 +181,7 @@
                         <ColumnDefinition Width="*" />
                     </Grid.ColumnDefinitions>
                     <Image  Grid.Column="0" Style="{StaticResource image}" ToolTip="Email Address" Source=".\res\email.png"/>
-                    <local:ContactInfoTextBox x:Name="email" IsReadOnly="{Binding IsEmailReadOnly}" Text="{Binding email,ValidatesOnNotifyDataErrors=True}" Style="{StaticResource textBox}"/>
+                    <TextBox x:Name="email" IsReadOnly="{Binding IsEmailReadOnly}" Text="{Binding email,ValidatesOnNotifyDataErrors=True}" Style="{StaticResource textBox}"/>
 
                 </Grid>
                 <Label DockPanel.Dock="Top" Content="{Binding EmailValidationsText}" Visibility="{Binding EmailValidationsVisible, Converter={StaticResource BoolToVisibilityColapsedConverter}}" />
@@ -212,11 +193,21 @@
                     <Image  Grid.Column="0" Style="{StaticResource image}" ToolTip="Additional Notes Or Comments" Source=".\res\comment.png"/>
                     <ScrollViewer Grid.Column="1" MinHeight="100"
                           VerticalScrollBarVisibility="Auto" Margin="0,1,1,1">
-                        <local:ContactInfoTextBox x:Name="comments" IsReadOnly="{Binding AreCommentsReadOnly}" AcceptsReturn="True" Text="{Binding Comments}" TextWrapping="Wrap" SpellCheck.IsEnabled="True" Margin="0" VerticalContentAlignment="Top" Style="{StaticResource textBox}"/>
+                        <TextBox x:Name="comments" IsReadOnly="{Binding AreCommentsReadOnly}" AcceptsReturn="True" Text="{Binding Comments}" TextWrapping="Wrap" SpellCheck.IsEnabled="True" Margin="0" VerticalContentAlignment="Top" Style="{StaticResource textBox}"/>
                     </ScrollViewer>
                 </Grid>
+
+                
             </DockPanel>
-            
+            <Grid Grid.Row="3" Grid.ColumnSpan="7">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="*" />
+                        <ColumnDefinition Width="*" />
+                    </Grid.ColumnDefinitions>
+                    <Button Content="Save changes"/>
+                    <Button Content="Cancel"  Grid.Column="1"/>
+                <Button Content="Edit Contact" Command="{Binding EditContact}" Visibility="{Binding EditContactButtonVisible, Converter={StaticResource BooleanToVisibilityConverter}}" Grid.ColumnSpan="2"/>
+            </Grid>
 
         </Grid>
     </Grid>
